--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ services:
     - docker
 
 install:
+    - echo $PWD
     - go get github.com/richardcase/dockercoinsgo
     - CGO_ENABLED=0 GOOS=linux go build -a -o deployment/docker/build/rng github.com/richardcase/dockercoinsgo/cmd/rng
 	- CGO_ENABLED=0 GOOS=linux go build -a -o deployment/docker/build/hasher github.com/richardcase/dockercoinsgo/cmd/hasher
