--- a/deployment/docker/Dockerfile-webui
+++ b/deployment/docker/Dockerfile-webui
@@ -9,3 +9,17 @@ COPY ./build/webcontent/ /webcontent/
 EXPOSE 8000
 
 CMD ["/webui"]
+
+# Build-time metadata as defined at http://label-schema.org
+ARG BUILD_DATE
+ARG VCS_REF
+ARG VERSION
+LABEL org.label-schema.build-date=$BUILD_DATE \
+    org.label-schema.name="DockerCoins Go Web Interface" \
+    org.label-schema.description="Web based interface for DockerCoins" \
+    org.label-schema.url="https://github.com/richardcase/dockercoinsgo" \
+    org.label-schema.vcs-ref=$VCS_REF \
+    org.label-schema.vcs-url="https://github.com/richardcase/dockercoinsgo" \
+    org.label-schema.vendor="Richard Case" \
+    org.label-schema.version=$VERSION \
+    org.label-schema.schema-version="1.0"
