--- a/.travis.yml
+++ b/.travis.yml
@@ -23,27 +23,35 @@ after_success:
     - export REPO_RNG=richardcase/dockercoinsgo-rng
     - export REPO_WEB=richardcase/dockercoinsgo-webui
     - export REPO_WORK=richardcase/dockercoinsgo-worker
+    - export VERSION=`cat ./VERSION`
+    - export BUILDDATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
     - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
     - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
     - cd deployment/docker/
-    - docker build -f  Dockerfile-hasher -t $REPO_HASH:$COMMIT .
+    - docker build -f  Dockerfile-hasher -t $REPO_HASH:$COMMIT --build-arg BUILD_DATE=$BUILDDATE --build-arg VCS_REF=$COMMIT --build-arg VERSION=$VERSION .
     - docker tag $REPO_HASH:$COMMIT $REPO_HASH:$TAG
     - docker tag $REPO_HASH:$COMMIT $REPO_HASH:travis-$TRAVIS_BUILD_NUMBER
+    - docker tag $REPO_HASH:$COMMIT $REPO_HASH:$VERSION
     - docker push $REPO_HASH
-    - docker build -f  Dockerfile-rng -t $REPO_RNG:$COMMIT .
+    - docker build -f  Dockerfile-rng -t $REPO_RNG:$COMMIT --build-arg BUILD_DATE=$BUILDDATE --build-arg VCS_REF=$COMMIT --build-arg VERSION=$VERSION .
     - docker tag $REPO_RNG:$COMMIT $REPO_RNG:$TAG
     - docker tag $REPO_RNG:$COMMIT $REPO_RNG:travis-$TRAVIS_BUILD_NUMBER
+    - docker tag $REPO_HASH:$COMMIT $REPO_HASH:$VERSION
     - docker push $REPO_RNG
-    - docker build -f  Dockerfile-worker -t $REPO_WORK:$COMMIT .
+    - docker build -f  Dockerfile-worker -t $REPO_WORK:$COMMIT --build-arg BUILD_DATE=$BUILDDATE --build-arg VCS_REF=$COMMIT --build-arg VERSION=$VERSION .
     - docker tag $REPO_WORK:$COMMIT $REPO_WORK:$TAG
     - docker tag $REPO_WORK:$COMMIT $REPO_WORK:travis-$TRAVIS_BUILD_NUMBER
+    - docker tag $REPO_HASH:$COMMIT $REPO_HASH:$VERSION
     - docker push $REPO_WORK
     - cp -avr ../../webui ./build/webcontent
-    - docker build -f  Dockerfile-webui -t $REPO_WEB:$COMMIT .
+    - docker build -f  Dockerfile-webui -t $REPO_WEB:$COMMIT --build-arg BUILD_DATE=$BUILDDATE --build-arg VCS_REF=$COMMIT --build-arg VERSION=$VERSION .
     - docker tag $REPO_WEB:$COMMIT $REPO_WEB:$TAG
     - docker tag $REPO_WEB:$COMMIT $REPO_WEB:travis-$TRAVIS_BUILD_NUMBER
+    - docker tag $REPO_HASH:$COMMIT $REPO_HASH:$VERSION
     - docker push $REPO_WEB
 
 env:
     global:
         - COMMIT=${TRAVIS_COMMIT::8}
+
+--build-arg BUILD_DATE=$BUILDDATE --build-arg VCS_REF=$COMMIT --build-arg VERSION=$VERSION
