--- a/deployment/docker/Makefile
+++ b/deployment/docker/Makefile
@@ -1,3 +1,8 @@
+VAR_DATE=$(shell date -u +"%Y-%m-%dT%H:%M:%SZ")
+VAR_REF=$(shell git rev-parse --short HEAD)
+VAR_VER=$(shell cat ../../VERSION)
+
+
 all: clean copycontent build 
 
 copycontent:
@@ -13,10 +18,13 @@ buildapps:
 	CGO_ENABLED=0 GOOS=linux go build -a -o build/webui github.com/richardcase/dockercoinsgo/cmd/webui
 
 buildimages: buildapps
-	docker build -t richardcase/dockercoinsgo-rng -f Dockerfile-rng .
-	docker build -t richardcase/dockercoinsgo-hasher -f Dockerfile-hasher .
-	docker build -t richardcase/dockercoinsgo-worker -f Dockerfile-worker .
-	docker build -t richardcase/dockercoinsgo-webui -f Dockerfile-webui .
+	@echo Build Date: $(VAR_DATE) 
+	@echo Git Ref: $(VAR_REF)
+	@echo Version: $(VAR_VER)
+	docker build -t richardcase/dockercoinsgo-rng -f Dockerfile-rng --build-arg BUILD_DATE=$(VAR_DATE) --build-arg VCS_REF=$(VAR_REF) --build-arg VERSION=$(VAR_VER) .
+	docker build -t richardcase/dockercoinsgo-hasher -f Dockerfile-hasher --build-arg BUILD_DATE=$(VAR_DATE) --build-arg VCS_REF=$(VAR_REF) --build-arg VERSION=$(VAR_VER) .
+	docker build -t richardcase/dockercoinsgo-worker -f Dockerfile-worker --build-arg BUILD_DATE=$(VAR_DATE) --build-arg VCS_REF=$(VAR_REF) --build-arg VERSION=$(VAR_VER) .
+	docker build -t richardcase/dockercoinsgo-webui -f Dockerfile-webui --build-arg BUILD_DATE=$(VAR_DATE) --build-arg VCS_REF=$(VAR_REF) --build-arg VERSION=$(VAR_VER) .
 
 clean:
 	rm -rf build/
