Updated docker files for RNG and Hasher

--- a/deployment/docker/Dockerfile-hasher
+++ b/deployment/docker/Dockerfile-hasher
@@ -5,13 +5,13 @@ ADD build/hasher /hasher
 
 # Add certificates
 ADD ./certs/ca.crt /certs/ca.crt
-ADD ./certs/hasher:50051.key /certs/hasher:50051.key
-ADD ./certs/hasher:50051.crt /certs/hasher:50051.crt
+ADD ./certs/hasher_50051.key /certs/hasher_50051.key
+ADD ./certs/hasher_50051.crt /certs/hasher_50051.crt
 
 EXPOSE 50051
 
 ENTRYPOINT ["/hasher"]
-CMD ["-cert=/certs/hasher:50051.crt", "-key=/certs/hasher:50051.key", "-ca=/certs/ca.crt", "-hostname=hasher"]
+CMD ["-cert=/certs/hasher_50051.crt", "-key=/certs/hasher_50051.key", "-ca=/certs/ca.crt", "-hostname=hasher"]
 
 # Build-time metadata as defined at http://label-schema.org
 ARG BUILD_DATE
