--- a/deployment/docker/Dockerfile-rng
+++ b/deployment/docker/Dockerfile-rng
@@ -5,13 +5,13 @@ ADD build/rng /
 
 # Add certificates
 ADD ./certs/ca.crt /certs/ca.crt
-ADD ./certs/rng:50052.key /certs/rng:50052.key
-ADD ./certs/rng:50052.crt /certs/rng:50052.crt
+ADD ./certs/rng_50052.key /certs/rng_50052.key
+ADD ./certs/rng_50052.crt /certs/rng_50052.crt
 
 EXPOSE 50052
 
 ENTRYPOINT ["/rng"]
-CMD ["-cert=/certs/rng:50052.crt", "-key=/certs/rng:50052.key", "-ca=/certs/ca.crt", "-hostname=rng"]
+CMD ["-cert=/certs/rng_50052.crt", "-key=/certs/rng_50052.key", "-ca=/certs/ca.crt", "-certhostname=rng"]
 
 # Build-time metadata as defined at http://label-schema.org
 ARG BUILD_DATE
