--- a/deployment/docker/kubernetes/redis-service.yaml
+++ b/deployment/docker/kubernetes/redis-service.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: hasher
+    app: redis
     tier: backend
-  name: hasher
+  name: redis
 spec:
   ports:
-    - port: 50051
+    - port: 6379
       protocol: TCP
-      targetPort: 50051
+      targetPort: 6379
   selector:
-    app: hasher
+    app: redis
     tier: backend
