Updated webui to use flags. And updated the Kubernetes artefacts

--- a/deployment/docker/Dockerfile-webui
+++ b/deployment/docker/Dockerfile-webui
@@ -8,7 +8,8 @@ COPY ./build/webcontent/ /webcontent/
 
 EXPOSE 8000
 
-CMD ["/webui"]
+ENTRYPOINT ["/webui"]
+CMD ["-static-path=/webcontent/", "-cache-addr=redis:6379"]
 
 # Build-time metadata as defined at http://label-schema.org
 ARG BUILD_DATE
